package be.isims.ihm.dp.tp1.ex1.code;

abstract public class Operation {
    protected int result;
    protected String operation;
}
