@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp1.ex1.code {
    class be.isims.ihm.dp.tp1.ex1.code.BinaryExpression {
        + BinaryExpression()
        + BinaryExpression()
        + calculateResult()
        + toString()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex1.code {
    class be.isims.ihm.dp.tp1.ex1.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex1.code {
    class be.isims.ihm.dp.tp1.ex1.code.Number {
        + Number()
        + toString()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex1.code {
    abstract class be.isims.ihm.dp.tp1.ex1.code.Operation {
        # operation : String
        # result : int
    }
  }
  

  be.isims.ihm.dp.tp1.ex1.code.BinaryExpression -up-|> be.isims.ihm.dp.tp1.ex1.code.Operation
  be.isims.ihm.dp.tp1.ex1.code.BinaryExpression o-- be.isims.ihm.dp.tp1.ex1.code.Operation : leftValue
  be.isims.ihm.dp.tp1.ex1.code.BinaryExpression o-- be.isims.ihm.dp.tp1.ex1.code.Operation : rightValue
  be.isims.ihm.dp.tp1.ex1.code.Number -up-|> be.isims.ihm.dp.tp1.ex1.code.Operation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
